# pkg/api/owner.go
@@ -1,11 +1,18 @@
 package api
 
 import (
+	"encoding/hex"
+	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/tylerjnettleton/socialwags/pkg/database"
+	"github.com/tylerjnettleton/socialwags/pkg/password"
 	"net/http"
 )
 
+type OwnerResponse struct {
+	Success bool `json:"success"`
+	Error error `json:"error"`
+}
 
 // Binding for Owner requests
 type CreateOwnerRequest struct {
@@ -13,8 +20,12 @@ type CreateOwnerRequest struct {
 	Last_Name string `json:"last_name" binding:"required"`
 	Email_Address string `json:"email_address" binding:"required"`
 	Password string `json:"password" binding:"required"`
-	Zip_Code string `json:"zip_code" binding:"required"`
+	Zip_Code uint `json:"zip_code" binding:"required"`
 	Picture_Data string `json:"picture_data" binding:"-"`
+}
+
+type GetOwnerRequest struct {
+	Owner_ID uint `form:"owner_id" binding:"required"`
 }
 
 // Create a new Owner account
@@ -23,45 +34,115 @@ type CreateOwnerRequest struct {
 // @Tags Owner
 // @Accept  json
 // @Produce  json
-// @Param Body body api.CreateOwnerRequest false "Owners First Name"
+// @Param Body body api.CreateOwnerRequest true "Create owner request body"
 // @Success 200
 // @Router /owner [put]
 func (r *Router) CreateOwner(ctx *gin.Context) {
 
+	var request CreateOwnerRequest
+	if err := ctx.ShouldBindJSON(&request); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Let's create a salt and hash the users password before we store it in the database
+	salt, _ := password.RandBytes()
+	hashedPassword, _ := password.HashPassword([]byte(request.Password), salt)
+
+	o := &database.Owner{
+		First_Name: request.First_Name,
+		Last_Name: request.Last_Name,
+		Email_Address: request.Email_Address,
+		Zip_Code: request.Zip_Code,
+		Salt: hex.EncodeToString(salt),
+		Password: hex.EncodeToString(hashedPassword),
+	}
+
+	if result := r.DB.Create(o); result.Error != nil {
+		errors := result.GetErrors()
+		for _, err := range errors {
+			fmt.Println(err)
+		}
+		// Todo: Do better error handling with json response
+		resJson := OwnerResponse{
+			Success: false,
+			Error:   nil,
+		}
+		ctx.JSON(http.StatusBadRequest, resJson)
+		return
+	}
+
+	resJson := OwnerResponse{
+		Success: true,
+		Error:   nil,
+	}
+
+	ctx.JSON(http.StatusOK, resJson)
+}
+
+// Get a specific `Owner`
+// @Summary Get a specific owner
+// @Description Get a specific owner
+// @Tags Owner
+// @Accept  json
+// @Produce  json
+// @Param owner_id query uint false "Owner ID"
+// @Success 200
+// @Router /owner [get]
+func (r *Router) GetOwner(ctx *gin.Context) {
+
+	var form GetOwnerRequest
+	if err := ctx.ShouldBind(&form); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	own := database.Owner{}
+	if result := r.DB.First(&own, form.Owner_ID); result.Error != nil {
+		resJson := OwnerResponse{
+			Success: false,
+			Error:   nil,
+		}
+		ctx.JSON(http.StatusBadRequest, resJson)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, own)
+}
+
+// Delete a specific `Owner`
+// @Summary Delete a specific owner
+// @Description Delete a specific owner
+// @Tags Owner
+// @Accept  json
+// @Produce  json
+// @Param owner_id query uint false "Owner ID"
+// @Success 200
+// @Router /owner [delete]
+func (r *Router) DeleteOwner(ctx *gin.Context) {
+	var form GetOwnerRequest
+	if err := ctx.ShouldBind(&form); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	ctx.String(http.StatusMethodNotAllowed, "Not implemented")
+}
+
+// Update a specific `Owner`
+// @Summary Update a specific owner
+// @Description Update a specific owner
+// @Tags Owner
+// @Accept  json
+// @Produce  json
+// @Param Body body api.CreateOwnerRequest true "Update user body"
+// @Success 200
+// @Router /owner [patch]
+func (r *Router)UpdateOwner(ctx *gin.Context) {
 	var json CreateOwnerRequest
 	if err := ctx.ShouldBindJSON(&json); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-
-	o := &database.Owner{
-		First_Name: "Tyler",
-		Last_Name: "Nettleton",
-		Email_Address: "Tyler@tylernettleton.com",
-	}
-
-	r.DB.Create(o)
-
-	ctx.String(http.StatusOK, "Create Owner")
-}
-
-func (r *Router) GetOwner(ctx *gin.Context) {
-
-	o := &database.Owner{
-		First_Name: "Tyler",
-		Last_Name: "Nettleton",
-		Email_Address: "Tyler@tylernettleton.com",
-	}
-
-	r.DB.Create(o)
-	ctx.String(http.StatusOK, "GetOwner")
-}
-
-func (r *Router) DeleteOwner(ctx *gin.Context) {
-	ctx.String(http.StatusMethodNotAllowed, "Not implemented")
-}
-
-func (r *Router)UpdateOwner(ctx *gin.Context) {
 	ctx.String(http.StatusOK, "UpdateOwner")
 }
 
